--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@fortawesome/fontawesome-svg-core": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "axios": "^1.3.4",
+    "cors-anywhere": "^0.4.4",
     "firebase": "^9.17.1",
+    "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.9.0",
