--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@uiball/loaders": "^1.2.6",
     "axios": "^1.3.4",
     "cors-anywhere": "^0.4.4",
     "firebase": "^9.17.1",
